# PC_from_Traj

./: .gitignore  CMakeLists.txt  README.md  check.pcd  desp.yml  parameters.txt  pcXYZ.txt  sparse.pcd  sparseInPC.pcd
include/: loadImage.h  slamBase.h
pcd/: sparse.pcd
src/: CMakeLists.txt  MypcFromTraj.cpp  brief.cpp  pcFromTraj.cpp  pcFromTraj_name.cpp  poseFromLoad.cpp  poseFromPC.cpp  sift.cpp  slamBase.cpp  testMatch.cpp
